--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "pinia": "^2.0.21",
     "sass": "^1.55.0",
     "vue": "^3.2.38",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "mongodb": "^4.12.1",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "@types/jsdom": "^20.0.0",
