--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "author": "",
   "license": "ISC",
+  "workspaces": [
+    "client"
+  ],
   "dependencies": {
-    "express": "^4.18.2",
-    "nodemon": "^2.0.20",
     "mongodb": "^4.12.1",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.1"
   }
 }
