--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "client"
   ],
   "dependencies": {
-    "mongodb": "^4.12.1",
     "dotenv": "^16.0.3",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongodb": "^4.12.1",
+    "vue-select": "^3.20.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
